--- a/contact.html
+++ b/contact.html
@@ -24,29 +24,32 @@
             </div>
         </header>
 
-        <div class="mainContent">
-                <div>
-                    <h1 class="contentHeading">Contact</h1>
-                    <hr>
-                </div>
+        <div class="marginBox">
+            <div class="mainContent contactContent">
 
-            <form id="contact-form">
-                    <ul>
-                      <li>
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-                      </li>
-                      <li>
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-                      </li>
-                      <li>
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" required="required"></textarea>
-                      </li>
-                    </ul>
-                    <input type="submit">
-                  </form>
+                    <div>
+                        <h1 class="contentHeading">Contact</h1>
+                        <hr>
+                    </div>
+
+                <form id="contact-form">
+                        <ul>
+                            <li>
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+                            </li>
+                            <li>
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+                            </li>
+                            <li>
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" required="required"></textarea>
+                            </li>
+                        </ul>
+                        <input type="submit">
+                </form>
+            </div>
         </div>
 
         <footer>
