--- a/portfolio.html
+++ b/portfolio.html
@@ -24,36 +24,38 @@
             </div>
         </header>
 
-        <div class="mainContent">
-            <div>
-                <h1 class="contentHeading">Portfolio</h1>
-                <hr>
-            </div>
-
-            <div class="gallery">
-                <div class="portfolioThumbnail">
-                    <img src="assets/images/CITIOM-cover.jpg" alt="arcology">
-                    <h3>Arcology</h3>
+        <div class="marginBox">
+            <div class="mainContent">
+                <div>
+                    <h1 class="contentHeading">Portfolio</h1>
+                    <hr>
                 </div>
 
-                <div class="portfolioThumbnail">
-                    <img src="assets/images/2qjm74j.GIF" alt="back away slowly">
-                    <h3>Back Away Slowly</h3>
-                </div>
+                <div class="gallery">
+                    <div class="portfolioThumbnail">
+                        <img src="assets/images/CITIOM-cover.jpg" alt="arcology">
+                        <h3>Arcology</h3>
+                    </div>
 
-                <div class="portfolioThumbnail">
-                    <img src="assets/images/1348199.main_image.jpg" alt="train parts llc">
-                    <h3>Train Parts LLC.</h3>
-                </div>
+                    <div class="portfolioThumbnail">
+                        <img src="assets/images/2qjm74j.GIF" alt="back away slowly">
+                        <h3>Back Away Slowly</h3>
+                    </div>
 
-                <div class="portfolioThumbnail">
-                    <img src="assets/images/cutedog.jpg" alt="cute dog photos">
-                    <h3>Cute Dog Photos</h3>
-                </div>
+                    <div class="portfolioThumbnail">
+                        <img src="assets/images/1348199.main_image.jpg" alt="train parts llc">
+                        <h3>Train Parts LLC.</h3>
+                    </div>
 
-                <div class="portfolioThumbnail">
-                    <img src="assets/images/hipsterbingo.jpg" alt="hipster bingo">
-                    <h3>Hipster Bingo</h3>
+                    <div class="portfolioThumbnail">
+                        <img src="assets/images/cutedog.jpg" alt="cute dog photos">
+                        <h3>Cute Dog Photos</h3>
+                    </div>
+
+                    <div class="portfolioThumbnail">
+                        <img src="assets/images/hipsterbingo.jpg" alt="hipster bingo">
+                        <h3>Hipster Bingo</h3>
+                    </div>
                 </div>
             </div>
         </div>
